[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/CardAbilityLabelLarge.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/CardBackLabelLarge.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/CardDescriptionLarge.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/CardStrengthLabelLarge.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/UnitCardView.gd" type="Script" id=6]

[node name="UnitCardView" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 225, 315 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 225.0
margin_bottom = 315.0
rect_min_size = Vector2( 225, 315 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackLabel" type="Label" parent="."]
margin_left = -7.93161
margin_top = 152.129
margin_right = 137.068
margin_bottom = 335.129
rect_rotation = -33.0
custom_fonts/font = ExtResource( 2 )
text = "AIR
LAND
&SEA"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StrengthLabel" type="Label" parent="."]
margin_left = 16.0
margin_right = 59.0
margin_bottom = 91.0
custom_fonts/font = ExtResource( 4 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilityLabel" type="Label" parent="."]
visible = false
margin_left = 31.0
margin_top = 3.0
margin_right = 215.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 1 )
text = "ABILITY"
align = 2
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionBox" type="ColorRect" parent="."]
visible = false
margin_left = 13.0
margin_top = 88.0
margin_right = 215.0
margin_bottom = 303.0
rect_min_size = Vector2( 200, 175 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.784314, 0.784314, 0.784314, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="DescriptionBox"]
margin_left = 18.0
margin_top = 14.0
margin_right = 183.0
margin_bottom = 199.0
custom_fonts/font = ExtResource( 3 )
text = "If a card is played in an adjacent theater with 3 or more cards already in it (counting both players' cards), DISCARD that card with no effect."
align = 2
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
